[gd_scene load_steps=10 format=3 uid="uid://ddqf26n40s8ar"]

[ext_resource type="Texture2D" uid="uid://camujexa7mw5p" path="res://Assets/MenuAssets/MenuIcons.png" id="1_6oamd"]
[ext_resource type="Script" path="res://Scenes/OptionsMenu/options_menu.gd" id="1_dcme6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p0aee"]
atlas = ExtResource("1_6oamd")
region = Rect2(144, 145, 80, 48)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_snyv5"]
atlas = ExtResource("1_6oamd")
region = Rect2(230, 132, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_mffun"]
atlas = ExtResource("1_6oamd")
region = Rect2(230, 132, 5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_subyx"]
atlas = ExtResource("1_6oamd")
region = Rect2(21, 6, 37, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_54kb6"]
texture = SubResource("AtlasTexture_subyx")
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v5rex"]
atlas = ExtResource("1_6oamd")
region = Rect2(160, 134, 48, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7iub7"]
texture = SubResource("AtlasTexture_v5rex")
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[node name="OptionsMenu" type="ScrollContainer"]
offset_left = 45.0
offset_top = 7.0
offset_right = 654.0
offset_bottom = 472.0
script = ExtResource("1_dcme6")

[node name="C" type="Control" parent="."]
custom_minimum_size = Vector2(600, 450)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="C"]
show_behind_parent = true
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_p0aee")
region_rect = Rect2(0, 0, 80, 48)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_bottom = 1

[node name="GC" type="GridContainer" parent="C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 55.0
offset_right = -26.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicLbl" type="Label" parent="C/GC"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME"

[node name="MusicVolume" type="HSlider" parent="C/GC"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = SubResource("AtlasTexture_snyv5")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_mffun")
theme_override_styles/slider = SubResource("StyleBoxTexture_54kb6")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_7iub7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_7iub7")
value = 10.0

[node name="SFXLbl" type="Label" parent="C/GC"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "SOUND EFFECTS VOLUME"

[node name="SFXVolume" type="HSlider" parent="C/GC"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = SubResource("AtlasTexture_snyv5")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_mffun")
theme_override_styles/slider = SubResource("StyleBoxTexture_54kb6")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_7iub7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_7iub7")
step = 0.5

[node name="Fullscreen" type="Label" parent="C/GC"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "TOGGLE FULLSCREEN
"

[node name="ToggleFullscreen" type="CheckBox" parent="C/GC"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 26
text = "Fullscreen"

[node name="SkipLbl" type="Label" parent="C/GC"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "SKIP CUTSCENES
"

[node name="SkipCutscenes" type="CheckBox" parent="C/GC"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 26
text = "Auto skip all cutscenes"

[connection signal="value_changed" from="C/GC/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="C/GC/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="C/GC/ToggleFullscreen" to="." method="_on_toggle_fullscreen_toggled"]
